# codex-usage-taskbar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.ps1  packaging_entry.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
docs/superpowers/plans/: 2026-07-20-open-source-release.md
docs/superpowers/specs/: 2026-07-20-open-source-release-design.md
src/codex_usage_taskbar/: __init__.py  codex_client.py  config.py  controller.py  formatting.py  main.py  models.py  normalizer.py  startup.py  taskbar_widget.py  windows.py
tests/: test_codex_client.py  test_config.py  test_controller.py  test_formatting.py  test_normalizer.py  test_packaging_entry.py  test_startup.py  test_ui.py  test_windows.py
tests/support/: fake_app_server.py
