[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-usage-taskbar"
version = "0.1.1"
description = "A compact Windows taskbar widget for Codex account usage limits."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-qt>=4.4",
    "pyinstaller>=6.11",
]

[project.scripts]
codex-usage-taskbar = "codex_usage_taskbar.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
